--- a/src/ui/configuration/CompassConfig.ui
+++ b/src/ui/configuration/CompassConfig.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>565</width>
-    <height>241</height>
+    <width>591</width>
+    <height>324</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,9 +32,9 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>100</y>
-     <width>101</width>
+     <x>330</x>
+     <y>80</y>
+     <width>125</width>
      <height>16</height>
     </rect>
    </property>
@@ -45,8 +45,8 @@
   <widget class="QComboBox" name="orientationComboBox">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>120</y>
+     <x>30</x>
+     <y>170</y>
      <width>201</width>
      <height>22</height>
     </rect>
@@ -55,11 +55,17 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>180</y>
-     <width>101</width>
-     <height>23</height>
+     <x>60</x>
+     <y>200</y>
+     <width>140</width>
+     <height>32</height>
     </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>101</width>
+     <height>0</height>
+    </size>
    </property>
    <property name="text">
     <string>Live Calibration</string>
@@ -68,10 +74,10 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>180</y>
-     <width>101</width>
-     <height>23</height>
+     <x>360</x>
+     <y>200</y>
+     <width>139</width>
+     <height>32</height>
     </rect>
    </property>
    <property name="text">
@@ -81,9 +87,9 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>160</y>
-     <width>91</width>
+     <x>380</x>
+     <y>180</y>
+     <width>111</width>
      <height>16</height>
     </rect>
    </property>
@@ -94,8 +100,8 @@
   <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>70</y>
+     <x>250</x>
+     <y>50</y>
      <width>321</width>
      <height>31</height>
     </rect>
@@ -117,9 +123,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>70</y>
-     <width>211</width>
-     <height>111</height>
+     <y>30</y>
+     <width>240</width>
+     <height>102</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -178,16 +184,26 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>120</y>
-     <width>54</width>
-     <height>20</height>
+     <x>90</x>
+     <y>150</y>
+     <width>72</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Orientation</string>
    </property>
   </widget>
+  <zorder>label</zorder>
+  <zorder>label_4</zorder>
+  <zorder>orientationComboBox</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder>label_6</zorder>
+  <zorder>horizontalLayoutWidget_2</zorder>
+  <zorder>horizontalLayoutWidget</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_3</zorder>
  </widget>
  <resources>
   <include location="../../../qgroundcontrol.qrc"/>
