--- a/src/ui/configuration/GeoFenceConfig.ui
+++ b/src/ui/configuration/GeoFenceConfig.ui
@@ -17,14 +17,115 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
-     <width>141</width>
-     <height>51</height>
+     <y>10</y>
+     <width>105</width>
+     <height>24</height>
     </rect>
    </property>
    <property name="text">
     <string>&lt;h2&gt;Geo Fence&lt;/h2&gt;</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="formLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>39</x>
+     <y>49</y>
+     <width>311</width>
+     <height>201</height>
+    </rect>
+   </property>
+   <layout class="QFormLayout" name="formLayout">
+    <item row="2" column="1">
+     <widget class="QComboBox" name="typeComboBox">
+      <item>
+       <property name="text">
+        <string>None</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Altitude</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Circle</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Altitude &amp; Circle</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>Type</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Action</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QComboBox" name="actionComboBox">
+      <item>
+       <property name="text">
+        <string>Report</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>RTL or LAND</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>Max Alt (m)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QDoubleSpinBox" name="maxAltSpinBox"/>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Radius (m)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>RTL Alt (m)</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QDoubleSpinBox" name="radiusSpinBox"/>
+    </item>
+    <item row="6" column="1">
+     <widget class="QDoubleSpinBox" name="rtlAltSpinBox"/>
+    </item>
+    <item row="1" column="1">
+     <widget class="QCheckBox" name="enableCheckBox">
+      <property name="text">
+       <string>Enable</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
